--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap">
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 
         <title>Paroxysm | Back to Earth and Beyond.</title>
 	</head>
@@ -16,7 +17,7 @@
         <div class="main">
             <div class="nav">
                 <ul class="nav-list">
-                    <li><img src="images/favicon.png" height="49px"/></li>
+                    <li><img src="images/paroB.png" height="49px"/></li>
                     <li><a href="music">Music</a></li>
                     <li><a href="artists/index.html">Artists</a></li>
                     <li><a href="blog/index.html">Blog</a></li>
